--- a/output/baseline_balance.tex
+++ b/output/baseline_balance.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \captionsetup{singlelinecheck=false,justification=centering}
-\caption{First-phase Treatment vs. Control Groups, ABC \label{tab:baseline}}
+\caption{First-phase Treatment vs. Control Groups, ABC \label{tab:abc_baseline}}
 
   \begin{threeparttable}
   \begin{tabular}{cccccccc}
