--- a/output/baseline_balance_care_2.tex
+++ b/output/baseline_balance_care_2.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \captionsetup{singlelinecheck=false,justification=centering}
-\caption{Center-based Childcare and Family Education vs. Control Groups, CARE \label{tab:baseline}}
+\caption{CARE Baseline Characteristics, Control vs. Family Education and Center-based Childcare \label{tab:care_baseline2}}
 
   \begin{threeparttable}
   \begin{tabular}{cccccccc}
@@ -33,7 +33,7 @@
     \begin{tablenotes}
     \scriptsize
     \item 
-    Note: This table shows the balance in observed characteristics between the center-based childcare and family education group and the control group in CARE at baseline.
+    Note: This table shows the balance in observed characteristics between the treatment and control groups at baseline.
     For each characteristic, we present the $p$-value from a single hypothesis test.
     We also present the $p$-values from multiple testing, where we collectively test the
     baseline characteristics within the blocks separated by the horizontal line.
