--- a/output/baseline_coh5_care_1.tex
+++ b/output/baseline_coh5_care_1.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \captionsetup{singlelinecheck=false,justification=centering}
-\caption{Family Education vs. Control Groups, CARE Cohort 5 \label{tab:baseline_coh5_care_t1}}
+\caption{CARE Baseline Characteristics, Control vs. Family Education, Cohort 5 \label{tab:baseline_coh5_care_t1}}
 
   \begin{threeparttable}
   \begin{tabular}{cccccccc}
@@ -11,29 +11,29 @@
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{Obs.} & \scriptsize{Obs.} & \scriptsize{Mean} & \scriptsize{Mean} & \scriptsize{Single $H_0$} & \scriptsize{Multiple $H_0$} \\ 
     \hline  
 
-    \mc{1}{l}{\scriptsize{Male}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{0.560}} & \mc{1}{c}{\scriptsize{0.655}} & \mc{1}{c}{\scriptsize{(0.810)}} & \mc{1}{c}{\scriptsize{(0.860)}} \\  
+    \mc{1}{l}{\scriptsize{Male}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{0.560}} & \mc{1}{c}{\scriptsize{0.504}} & \mc{1}{c}{\scriptsize{(0.885)}} & \mc{1}{c}{\scriptsize{(0.885)}} \\  
 
-    \mc{1}{l}{\scriptsize{Birth Weight}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{4}} & \mc{1}{c}{\scriptsize{7.223}} & \mc{1}{c}{\scriptsize{7.502}} & \mc{1}{c}{\scriptsize{(0.570)}} & \mc{1}{c}{\scriptsize{(0.730)}} \\  
+    \mc{1}{l}{\scriptsize{Birth Weight}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{7.223}} & \mc{1}{c}{\scriptsize{6.742}} & \mc{1}{c}{\scriptsize{(0.580)}} & \mc{1}{c}{\scriptsize{(0.710)}} \\  
 
-    \mc{1}{l}{\scriptsize{No. Siblings in Household}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{0.428}} & \mc{1}{c}{\scriptsize{0.541}} & \mc{1}{c}{\scriptsize{(0.800)}} & \mc{1}{c}{\scriptsize{(0.870)}} \\  
+    \mc{1}{l}{\scriptsize{No. Siblings in Household}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{0.428}} & \mc{1}{c}{\scriptsize{1.046}} & \mc{1}{c}{\scriptsize{(0.295)}} & \mc{1}{c}{\scriptsize{(0.365)}} \\  
 
-    \mc{1}{l}{\scriptsize{Birth Year}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{1978}} & \mc{1}{c}{\scriptsize{1978}} & \mc{1}{c}{\scriptsize{(0.425)}} & \mc{1}{c}{\scriptsize{(0.355)}} \\ 
+    \mc{1}{l}{\scriptsize{Birth Year}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{1978}} & \mc{1}{c}{\scriptsize{1978}} & \mc{1}{c}{\scriptsize{(0.175)}} & \mc{1}{c}{\scriptsize{(0.190)}} \\ 
     \hline  
 
-    \mc{1}{l}{\scriptsize{Mother's Education}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{11.035}} & \mc{1}{c}{\scriptsize{11.164}} & \mc{1}{c}{\scriptsize{(0.865)}} & \mc{1}{c}{\scriptsize{(0.875)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Education}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{11.035}} & \mc{1}{c}{\scriptsize{10.699}} & \mc{1}{c}{\scriptsize{(0.610)}} & \mc{1}{c}{\scriptsize{(0.735)}} \\  
 
-    \mc{1}{l}{\scriptsize{Mother's Age}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{18.808}} & \mc{1}{c}{\scriptsize{21.652}} & \mc{1}{c}{\scriptsize{(0.140)}} & \mc{1}{c}{\scriptsize{(0.220)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Age}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{18.808}} & \mc{1}{c}{\scriptsize{20.824}} & \mc{1}{c}{\scriptsize{(0.210)}} & \mc{1}{c}{\scriptsize{(0.285)}} \\  
 
-    \mc{1}{l}{\scriptsize{Mother's IQ}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{89.202}} & \mc{1}{c}{\scriptsize{92.345}} & \mc{1}{c}{\scriptsize{(0.620)}} & \mc{1}{c}{\scriptsize{(0.680)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's IQ}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{89.202}} & \mc{1}{c}{\scriptsize{90.710}} & \mc{1}{c}{\scriptsize{(0.695)}} & \mc{1}{c}{\scriptsize{(0.775)}} \\  
 
-    \mc{1}{l}{\scriptsize{Father at Home}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{0.289}} & \mc{1}{c}{\scriptsize{0.322}} & \mc{1}{c}{\scriptsize{(0.935)}} & \mc{1}{c}{\scriptsize{(0.938)}} \\  
+    \mc{1}{l}{\scriptsize{Father at Home}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{0.289}} & \mc{1}{c}{\scriptsize{0.219}} & \mc{1}{c}{\scriptsize{(0.755)}} & \mc{1}{c}{\scriptsize{(0.790)}} \\  
 
   \hline\hline
   \end{tabular}
     \begin{tablenotes}
     \scriptsize
     \item 
-    Note: This table shows the balance in observed characteristics between the family education group and the control group in CARE at baseline for cohort 5.
+    Note: This table shows the balance in observed characteristics between the treatment and control groups at baseline for cohort 5.
     For each characteristic, we present the $p$-value from a single hypothesis test.
     We also present the $p$-values from multiple testing, where we collectively test the
     baseline characteristics within the blocks separated by the horizontal line.
